--- a/package.json
+++ b/package.json
@@ -4,21 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV=development nodemon & graphql-codegen --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.29",
+    "apollo-server": "^2.16.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
+    "data-loader": "^2.12.0",
+    "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.21",
     "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.6"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^1.17.0",
+    "@graphql-codegen/typescript": "^1.17.0",
+    "@graphql-codegen/typescript-resolvers": "^1.17.0",
+    "nodemon": "^2.0.4"
   }
 }
