--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/date-and-time": "^0.6.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.29",
     "apollo-server": "^2.16.0",
     "body-parser": "^1.19.0",
     "data-loader": "^2.12.0",
+    "date-and-time": "^0.13.1",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
