--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.29",
     "apollo-server": "^2.16.0",
+    "apollo-server-lambda": "^2.16.1",
     "data-loader": "^2.12.0",
     "date-and-time": "^0.13.1",
     "graphql": "^15.3.0",
     "jest": "^26.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
-    "mongoose": "^5.9.21",
-    "typescript": "^3.9.6"
+    "mongoose": "^5.9.21"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.17.0",
@@ -39,7 +39,10 @@
     "apollo-server-testing": "^2.16.0",
     "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.4",
+    "serverless-offline": "^6.5.0",
+    "serverless-plugin-typescript": "^1.1.9",
     "ts-jest": "^26.1.3",
-    "ts-node-dev": "^1.0.0-pre.52"
+    "ts-node-dev": "^1.0.0-pre.52",
+    "typescript": "^3.9.7"
   }
 }
